Tests/Fail/Test055.ML
structure S: sig eqtype t end = struct type t = real end;
